checkbox requires label

--- a/.github/ISSUE_TEMPLATE/1_bug_form.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_form.yml
@@ -5,6 +5,18 @@ body:
   - type: markdown
     attributes:
       value: "Thank you for taking the time to open a bug report. To speed the process, we need some information."
+  - type: checkboxes
+    id: version
+    attributes:
+      label: "Odoo Version"
+      description: "What supported version of Odoo is this regarding?"
+      options:
+        - label: "15"
+        - label: "16"
+        - label: "17"
+        - label: "Master"
+    validations:
+      required: true
   - type: input
     id: os
     attributes:
