add support ticket number query

--- a/.github/ISSUE_TEMPLATE/1_bug_form.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_form.yml
@@ -46,3 +46,8 @@ body:
       label: "Log Output"
       description: "Log output. Textbox is set to no markup."
       render: shell
+  - type: input
+    id: supportticket
+    attributes:
+      label: "Support Ticket"
+      description: "Optional odoo.com/help ticket number?"
